     This fixes an issue with some window managers grabbing the event.
   * Added basic mask applying feature
   * Added basic mask creation ("diff") feature
 * Graphics:
   * New or updated unit frames: Troll Shaman, Naga Fighter.
   * New idle animations: Deathblade, Orcish Assassin.
   * Fixed some parts of alternative flag sets which were not correctly
     team colored.
 * Help menu:
   * ability upgrades for max-level advancements are now listed (bug #10337)
 * Language and i18n:
   * Fixed a problem on OSX where the locales detection didn't
     work; all languages are now enabled for OSX.
   * updated translations: Catalan, Czech, Danish, Finnish, Galician, German,
     Hungarian, Italian, Lithuanian, Racv, Slovak, Turkish
   * new translations: Valencian (the previous non-standard translation has
     been renamed to RACV).
   * Fixed Wesnoth looking for editor translations in the wrong place
     (bug #12426)
   * updated DejaVuSans to 2.27
 * Multiplayer:
   * New multiplayer map: 4p Underworld.
   * Revised maps: Caves of the Basilisk, Hornshark Island, Silverhead
     Crossing, Sullas Ruins, Weldyn Channel, Alirok Marsh, Island of the
     Horatii, Castle Hopping Isle, King of the Hill, The Wilderlands.
 * Music and sound effects:
   * Changed sound sources' default fade and full volume ranges to 3 and 14
     hexes respectively; the former defaults were less than adequate.
   * Renamed music files:
     * nr-sad.ogg -> sad.ogg
     * main_menu.ogg -> transience.ogg
     * main_menu_new.ogg -> main_menu.ogg
 * Unit changes and balancing:
   * Gave the Goblin Pillager the same bite attack as the Wolf Rider.
   * New units: Dread Bat, Royal Warrior (character)
   * Updated movement and defense values on the reef terrain for many
      units.
 * User interface:
   * Story parts that have show_title=yes and text at the same time have
     now the text's background drawn.
   * The new widget library now also supports closing a dialog with a mouse