@@ -37,6 +37,7 @@ Version 1.5.5+svn:
    * New idle animations: Deathblade, Orcish Assassin.
    * Fixed some parts of alternative flag sets which were not correctly
      team colored.
+   * Gave new teleport animations to Silver Magi.
  * Help menu:
    * ability upgrades for max-level advancements are now listed (bug #10337)
  * Language and i18n:
@@ -75,6 +76,8 @@ Version 1.5.5+svn:
      texts.
    * Added experimental support to show the new style dialogs when units
      talk in game. (Only available when starting with --new-widgets.)
+   * Increased/fixed responsiveness of color cursors on "The End" screen
+     when color cursors are enabled.
  * WML engine:
    * Added "border" parameter to [terrain_mask] that overlays on the border
      in addition to the playable map area. The used mask must have the same
